# dense-representation-and-rag-information-retrieval

./: assignment-non-rag.ipynb  assignment-rag.ipynb  main.py  pyproject.toml
embedding/: article_embeddings.npy  chunks_metadata.json
scraping_result/: detik_sport_articles.json  detik_sport_articles_cleaned.json
scripts/: clean_article.py  scraping_articles.py
